Bug 860573 - Part 1 - Store wrapper cache flags separately to the object pointer r=smaug